TestSuite/PascalABCTests/errors/err0165.pas
type TClass = class
procedure ToString;
begin
  inherited;
end;
end;
  
begin

end.